remove unnecessary tooltip covering game coverart fix title tooltip being too far left

--- a/src/html/popup.css
+++ b/src/html/popup.css
@@ -555,7 +555,6 @@ html, body {
 }
 
 .gameTitle .tooltip {
-    left: 10px;
     top: 206px;
 }
 
